--- a/templates/adminlogin.html
+++ b/templates/adminlogin.html
@@ -43,6 +43,17 @@
     </nav>
     <!-- Navbar end -->
     
+    <!-- MSG Start -->
+    {% if messages %}
+    {% for msg in messages %}
+    <div class="alert alert-danger   alert-dismissible fade show" role="alert">
+        <strong>{{msg}}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <!-- MSG Start -->
+
     <!-- login start -->
     <div class="container">
         <div class="row">
@@ -59,13 +70,8 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" name="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-outline-success" style="font-size: 20px;">Login</button>
+                    <button type="submit" class="btn btn-outline-success w-25 " style="font-size: 20px;">Login</button>
                   </form>
-                  <a href="/adminsignup" class="btn btn-outline-success my-4 w-100" style="font-size: 25px;">Signup</a>
             </div>
         </div>
     </div>
