--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -63,6 +63,18 @@
     </nav>
     <!-- Navbar end -->
 
+    <!-- MSG Start -->
+    {% if messages %}
+    {% for msg in messages %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>{{msg}}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+    {% endif %}
+    <!-- MSG Start -->
+
+
     <!-- menu bar start -->
     <div class="container">
       <div class="row" style="width: 20%; border: 2px solid darkgreen; height: 89.5vh; position:absolute; left:0px; background-color: white;">
